# antique

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: dict.bulktree  pom_xml_dep.json  vocab.keyfile  vocab.txt
data/index.galago/: buildManifest.json  lengths  names  names.reverse  postings  postings.krovetz
data/index.galago/corpus/: 0  1  2  3  4  5  split.keys
data/index.indri/collection/: forwardLookup0  lookup  reverseLookup0  storage
data/index.indri/index/0/: directFile  documentLengths  documentStatistics  infrequentID  infrequentString  invertedFile  manifest
data/inputs/: README.txt  ch1.txt  ch2.txt  ch3.txt  ch4.txt  ch5.txt
formats/indri/: .gitignore  CMakeLists.txt
formats/indri/src/: BulkTree.cpp  Exception.hpp  File.hpp  HashTable.hpp  Mutex.hpp  RegionAllocator.hpp  make_test_bulktree.cpp  read_bulktree.cpp  read_keyfile.cpp  write_bulktree.cpp  write_keyfile.cpp
formats/lemur/: CMakeLists.txt
src/: corpus.rs  galago_btree.rs  galago_postings.rs  galago_tokenizer.rs  heap_collection.rs  io_helper.rs  lang.rs  lib.rs  movement.rs  scoring.rs  stats.rs
src/galago/: btree.rs  corpus.rs  field.rs  index.rs  kstem.data  kstem.rs  kstem_data.rs  lang.rs  mod.rs  postings.rs  stemmer.rs  tokenizer.rs
src/indri/: bulk_tree.rs  corpus.rs  keyfile.rs  mod.rs  parameters.rs
src/mem/: document.rs  encoders.rs  flush.rs  index.rs  int_set.rs  key_val_files.rs  mod.rs  readers.rs
tokenizers/galago/: .gitignore  pom.xml
tokenizers/galago/src/main/java/org/lemurproject/galago/core/parse/: Document.java  Tag.java  TagTokenizer.java
(+1 files in other folders)
