[package]
name = "antique"
version = "0.1.0"
authors = ["John Foley <jfoley@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1"
memmap = "0.7"
snap = "1"
fnv = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
once_cell = "1.3"